--- a/src/.env
+++ b/src/.env
@@ -6,3 +6,12 @@ CORE_MODEL_GAZE_ENABLED=False
 CORE_MODEL_GROUNDINGDINO_ENABLED=False
 CORE_MODEL_YOLO_WORLD_ENABLED=False
 CORE_MODEL_PE_ENABLED=False
+PALIGEMMA_ENABLED=False
+FLORENCE2_ENABLED=False
+QWEN_2_5_ENABLED=False
+CORE_MODEL_SAM_ENABLED=False
+CORE_MODEL_SAM2_ENABLED=False
+SMOLVLM2_ENABLED=False
+DEPTH_ESTIMATION_ENABLED=False
+MOONDREAM2_ENABLED=False
+CORE_MODEL_TROCR_ENABLED=False
